2004-05-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VirtPackage.pm:  adjust the Provides in the system-perl packages

2004-05-04  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: All Type are now converted to all-lowercase. Make
	sure Type has been parsed into _type_hash during is_type() and
	get_subtype() calls (backport from HEAD).

2004-05-04  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: .deb/control Source field corrected to contain
	parent pkg (if there is one) instead of always same as pkg itself.
	See fink-devel "Source field in var/lib/dpkg/available" April 2004

2004-05-04  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Fixed bug in Depends processing where packages
	with version requirements could get dropped if field had conditionals.

2004-04-27  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VirtPackage.pm: add Provides to system-perl packages >= 5.8.0

2004-03-30  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm: Recognize darwin 7.3.0.

2004-03-30  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: Be careful about permissions when creating directories

2004-03-28  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: When extracting tarballs, do not preserve
	permissions or ownership.

2004-03-26  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: handle SplitOff(N) in numerical order.

2004-03-23  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: %ni and %Ni instead of %in and %IN.

2004-03-23  Daniel Macks  <dmacks@netspace.org>

	* Package.pm: always expand_percent invariant portion of Package.
	* PkgVersion.pm: %in is invariant portion of Package, %IN is
	invariant portion of parent Package; %n reverted to whole Package.

2004-03-23  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: get_custom_mirror() now takes $suffix param.

2004-03-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Allow non-consecutive SourceN (and related