@@ -1,3 +1,10 @@
+2004-06-02  Dave Morrison  <dmrrsn@users.sourceforge.net>
+
+	* PkgVersion.pm, Validation,pm: Write the contents of the
+	BuildDependsOnly field into the .deb file, and when validating a 
+	.deb, verify that BuildDependsOnly is true whenever things are
+	installed into /sw/include.
+
 2004-05-21  Dave Morrison  <dmrrsn@users.sourceforge.net>
 
 	* VirtPackage.pm:  adjust the Provides in the system-perl packages
